  o new prover: Yices2 (2.0.4)
  o new prover: Isabelle (2013-2, contribution by Stefan Berghofer)
  o new version of prover: Alt-Ergo 0.95.2
  o new version of prover: CVC4 1.1 & 1.2 & 1.3
  o new version of prover: Coq 8.4pl2
  o new version of prover: gappa 1.0.0
  o new version of prover: SPASS 3.8ds
  o new version of prover: veriT (201310)
  o API: more examples of use in  examples/use_api/
  o why3session new option --hist for histograms
  o shape algorithm modified (see VSTTE'13 paper) but is
    backward compatible thanks to shape_version numbers in
    why3session.xml files
  * [emacs] why.el renamed to why3.el
  * [GTK sourceview] why.lang renamed to why3.lang
  * Loc.try[1-7] functions now take location as an optional parameter
  * [fix] remove extra leading zeros in decimal literals when a prover don't like them
  * [fix] PVS output: types are always non-empty
  * [fix] PVS: fixed configuration and installation process
  * [fix] Coq tactic: now loads dynamic plug-ins
  * [fix] bug #15493: correct Coq output for polymorphic algebraic data types
  * [fix] wish #15053: Remove proof time from "Goals proved by only one prover" section of why3session info --stats
  * [fix] bug #13736: why3ml was slow when there are many inclusions
  * [fix] bug #16488: decimals in TPTP syntax
  * [fix] bug #16454: do not send arithmetic triggers anymore to alt-Ergo
  * [fix] syntax highlighting bugs: should be fixed by removing the old language
   file alt-ergo.lang from alt-ergo distribution

version 0.81, March 25, 2013
============================

  o [prover] experimental support for SPASS >= 3.8 (with types)
  o [prover] support for Z3 4.3.*
  o [prover] fixed Coq 8.4 support for theory real.Trigonometry
  o [prover] support for CVC4
  o [prover] support for mathematica
  o [prover] support for MathSAT5
  o [logic] accept type expressions in clone substitutions
  o [whyml] support for relation chains (e.g., "e1 = e2 < e3")