@@ -21,10 +21,11 @@ version 0.82, December 9, 2013
   o new version of prover: SPASS 3.8ds
   o new version of prover: veriT (201310)
   o API: more examples of use in  examples/use_api/
-  o why3session new option --hist for histograms
+  o why3session csv can create graph with option --gnuplot [png|svg|pdf|qt]
   o shape algorithm modified (see VSTTE'13 paper) but is
     backward compatible thanks to shape_version numbers in
     why3session.xml files
+  * options name and default of why3session csv changed
   * [emacs] why.el renamed to why3.el
   * [GTK sourceview] why.lang renamed to why3.lang
   * Loc.try[1-7] functions now take location as an optional parameter
